# fundamentos-aprendizaje-automatico

./: .gitignore  main.py  pyproject.toml  requirements.txt
DB/: FAA-DB.pbix
Data/: df.csv
Data/Test/: X_test.csv  y_test.csv
Models/: flaml_extra_tree.joblib  lazyclassifier_ada_boost_classifier.joblib  pycaret_gradient_boosting_classifier.joblib
Monitoring/: current.csv  data_drift_monitor.py  reference.csv
Monitoring/evidently_workspace/019a5c63-6b9e-7e9d-ba7a-dd2d7acf581c/: metadata.json
Monitoring/evidently_workspace/019a5c64-a03e-7a9e-afb2-ba224e3c2ed0/: metadata.json
Notebooks/: 1- AutoEDA.ipynb  2- EDA.ipynb  2.5- Feature Engineering & Feature importance, SHAP.ipynb  3- ML Models.ipynb  4- Interpretacion Models.ipynb  4- ML Models.ipynb  5- Interpretacion Models.ipynb  6- Drift.ipynb  E-Commerce Shipping Data Auto EDA.html  automl_rus.pkl  primitives.csv
workspace/019a5c61-0ef5-7282-96e4-3ccf3970eb1f/: metadata.json
