[project]
name = "fundamentos-de-aprendizaje-automatico"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flaml[automl]>=2.3.6",
    "imbalanced-learn>=0.14.0",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "lazypredict>=0.2.16",
    "setuptools>=80.9.0",
    "ydata-profiling>=4.17.0",
]
