[project]
name = "fundamentos-de-aprendizaje-automatico"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evidently==0.7.15",
    "featuretools>=1.31.0",
    "flaml[automl]>=2.3.6",
    "imbalanced-learn>=0.14.0",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "lazypredict>=0.2.16",
    "numpy>=1.26.4",
    "pandas>=2.1.4",
    "pycaret>=3.3.2",
    "scikit-learn>=1.4.2",
    "setuptools>=80.9.0",
    "shap>=0.49.1",
    "ydata-profiling>=4.17.0",
]
